Update link color - accessibility fix - color contrast

--- a/app/assets/stylesheets/website/_settings/colors.scss
+++ b/app/assets/stylesheets/website/_settings/colors.scss
@@ -31,7 +31,7 @@ $text-color: #000000;
 
 $nav-link-hover-color: $green-d;
 
-$link-color: $green-d;
+$link-color: $blue-extra-l;
 $link-hover-color: $brown;
 
 // TODO: make these blue in the CMS style sheet
